12.服务网格/Manifest/1.Linkerd 安装部署/grafana-ingress.yaml
# grafana-ingress.yaml 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-grafana-ingress
  namespace: linkerd-viz
spec:
  ingressClassName: nginx
  rules:
    - host: linkerd-grafana.qikqiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
