12.服务网格/Manifest/1.Linkerd 安装部署/prometheus-policy.yaml
---
# AuthorizationPolicy：允许 Grafana 访问 Prometheus
# 绑定到 Linkerd Viz 内置的 prometheus-admin Server
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: grafana-to-prometheus
  namespace: linkerd-viz
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: prometheus-admin  # 指向现有的 Server
  requiredAuthenticationRefs:
    - name: grafana-auth
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
---
# 额外：允许 metrics-api 访问 Prometheus
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: metrics-api-to-prometheus
  namespace: linkerd-viz
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: prometheus-admin  # 指向现有的 Server
  requiredAuthenticationRefs:
    - name: metrics-api-auth
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
